--- a/img/favicon/manifest.json
+++ b/img/favicon/manifest.json
@@ -1,6 +1,6 @@
 {
- "name": "Shopping List",
- "short_name": "Shopping List",
+ "name": "Shopping List in JS",
+ "short_name": "Shopping List in JS",
  "default_locale": "en",
  "version": "1.0.0",
  "author": "Thiago Nascimento",
